--- a/examples/ex-large.html
+++ b/examples/ex-large.html
@@ -6,7 +6,7 @@
     
     <script src="../dist/w-jsonview-tree.umd.js"></script>
 
-    <script src="data.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/w-demores@1.0.3/res/data/dataJson.js"></script>
     
 </head>
 <body>
@@ -16,7 +16,7 @@
     <script>
         let jv=window['w-jsonview-tree']
         let ele=document.querySelector('#app')
-        jv(data,ele,{expanded:true})
+        jv(dataJson,ele,{expanded:true})
     </script>
 
 </body>
