modify: update pks

--- a/examples/ex-formatter.html
+++ b/examples/ex-formatter.html
@@ -11,7 +11,7 @@
     
     <div style="display:flex; font-size:0.8rem; font-family:Microsoft JhengHei,Helvetica">
 
-        <div style="">
+        <div>
             <div>Source</div>
             <textarea id="src" style="width:500px; height:94vh; resize:none;"></textarea>
         </div>
