modify: update pks

--- a/examples/ex-formatter.html
+++ b/examples/ex-formatter.html
@@ -16,18 +16,21 @@
         <div>
             <div>Source</div>
             <textarea id="src" style="width:500px; height:94vh; resize:none;">
-                {
-                    // comments
-                    unquoted: 'and you can quote me on that',
-                    singleQuotes: 'I can use "double quotes" here',
-                    lineBreaks: "Look, Mom! \
-                  No \\n's!",
-                    hexadecimal: 0xdecaf,
-                    leadingDecimalPoint: .8675309, andTrailing: 8675309.,
-                    positiveSign: +1,
-                    trailingComma: 'in objects', andIn: ['arrays',],
-                    "backwardsCompatible": "with JSON",
-                  }
+                {a1:123,b1:'xyz',c1:[1.2,3.4,'5.6',false],d1:{cid:'WK2WHS',name:'peter',unique:false,
+                 t:
+                 {
+                     // comments
+                     unquoted: 'and you can quote me on that',
+                     singleQuotes: 'I can use "double quotes" here',
+                     lineBreaks: "Look, Mom! \
+                   No \\n's!",
+                     hexadecimal: 0xdecaf,
+                     leadingDecimalPoint: .8675309, andTrailing: 8675309.,
+                     positiveSign: +1,
+                     trailingComma: 'in objects', andIn: ['arrays',],
+                     "backwardsCompatible": "with JSON",
+                   }
+                }}
             </textarea>
         </div>
 
